--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "author": "Simon Breiter",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -24,9 +24,7 @@
     "path": "^0.12.7",
     "standard": "^10.0.2",
     "webpack": "^3.0.0",
-    "yamljs": "^0.3.0"
-  },
-  "devDependencies": {
+    "yamljs": "^0.3.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-config-standard": "^10.2.1",
