Add coverage, streamline test pipeline

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "babel-node spec/run.js",
+    "test": "babel-istanbul cover jasmine-node spec",
     "webpack:build": "webpack --display-error-details",
     "dev": "onchange 'src/**/*.js' 'spec/**/*.js' -- yarn test",
     "doc:build": "esdoc",
@@ -17,6 +17,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-istanbul": "^0.12.2",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
     "eslint": "^3.19.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "jasmine": "^2.6.0",
+    "jasmine-node": "^1.14.5",
     "onchange": "^3.0.2",
     "path": "^0.12.7",
     "standard": "^10.0.2",
